<resources>
    <string name="app_name">巴斯巴电桩</string>
    <string name="action_settings">Settings</string>
    <string name="myWallet">我的钱包</string>
    <string name="myAppoint">我的预约</string>
    <string name="myOrder">我的订单</string>
    <string name="forum">社区论坛</string>
    <string name="myNews">我的消息</string>
    <string name="myCollect">我的收藏</string>
    <string name="consume">消费记录</string>
    <string name="set">系统设置</string>
    <string name="login_action_title">登录</string>
    <string name="login_action_right_btn_text">注册</string>
    <string name="slide_login_hint">请点击登录</string>
    <string name="slide_login_phone_hint">登录后显示手机号</string>
    <string name="normal_login">正常登录</string>
    <string name="phone_login">手机号快捷登录</string>
    <string name="login_account_hint">手机</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_btn_text">登录</string>
    <string name="forget_pwd_action_text">忘记密码</string>
    <string name="quick_login_code_et_hint">手机验证码</string>
    <string name="quick_login_code_btn_text">获取验证码</string>
    <string name="reg_action_title">注册</string>
    <string name="reg_action_right_btn_text">登录</string>
    <string name="reg_hint">请输入手机号与密码</string>
    <string name="reg_phone_et_hint">请输入手机号码</string>
    <string name="reg_pwd_et_hint">请输入6-16位的密码</string>
    <string name="reg_code_et_hint">请输入验证码</string>
    <string name="reg_btn_text">注册</string>
    <string name="forget_pwd_action_title">忘记密码</string>
    <string name="forget_pwd_hint">注册时所填写的手机号</string>
    <string name="next_tip">下一步</string>
    <string name="set_pwd_action_title">设置密码</string>
    <string name="set_pwd_et01_hint">请设置新密码</string>
    <string name="set_pwd_et02_hint">请确认新密码</string>
    <string name="set_pwd_btn_text">确认</string>
    <string name="avatar_title">头像</string>
    <string name="nickname_title">昵称</string>
    <string name="sex_title">性别</string>
    <string name="age_title">年龄</string>
    <string name="phone_title">手机</string>
    <string name="loginpwd_title">登录密码</string>
    <string name="paypwd_title">支付密码</string>
    <string name="shopaddress_title">收货地址</string>
    <string name="certification_title">实名认证</string>
    <string name="loginout_btn_text">退出登录</string>
    <string name="accountmanage_actionbar_text">账户管理</string>
    <string name="forget_pwd_text">忘记密码</string>
    <string name="nofree_text">收费充电</string>
    <string name="free_text">免费充电</string>
    <string name="open_text">对外开放</string>
    <string name="noopen_text">对外封闭</string>
    <string name="kdappid">56de3ed7</string>
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="money_sign">¥</string>
    <string name="money_china">元</string>
    <string name="pay_btn_text">确认支付</string>
    <string name="electricity_sign">元/度</string>
    <string name="nopayId_hint">请选择支付方式</string>
    <string name="input_paypassword_hint">请输入6位数的支付密码</string>
    <string name="noprice_hint">请选择充值金额</string>
</resources>
