<?xml version="1.0" encoding="utf-8"?>
<!-- 侧滑栏界面 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/slidelayout_bg"
        >

        <RelativeLayout
            android:id="@+id/user_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/slideitem_bg"
            android:onClick="login"
            >
            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/slide_portrait"
                />

            <LinearLayout
                android:id="@+id/text_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/user_icon"
                android:layout_marginLeft="10dp"
                >

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slide_login_hint"
                    />

                <TextView
                    android:id="@+id/user_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/slide_login_phone_hint"
                    />
            </LinearLayout>



            <ImageView
                android:id="@+id/left_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/right_arraw"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wallet_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:background="@color/slideitem_bg"
            android:onClick="myWallet"
            >
            <ImageView
                android:id="@+id/wallet_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/wallet"
                />
            <TextView
                android:id="@+id/wallet_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/wallet_icon"
                android:text="@string/myWallet"
                />
            <TextView
                android:id="@+id/money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/moneyColor"
                android:text="¥0.00"
                />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/appoint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            android:padding="15dp"
            android:background="@color/slideitem_bg"
            android:onClick="myAppoint"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/myappoint"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/myAppoint"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/order_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:padding="15dp"
            android:background="@color/slideitem_bg"
            android:onClick="myOrder"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/order"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/myOrder"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/forum_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:background="@color/slideitem_bg"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/forum"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/forum"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/news_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:padding="15dp"
            android:background="@color/slideitem_bg"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/news"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/myNews"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/collect_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:padding="15dp"
            android:background="@color/slideitem_bg"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/mycollect"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/myCollect"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/set_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:background="@color/slideitem_bg"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/set"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/set"
                />
        </LinearLayout>


    </LinearLayout>


</ScrollView>
